app/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-node
        image: arthurknoep/kube-demo-node-app:latest
        ports:
          - containerPort: 3000
            name: 'http'
        resources:
          limits:
            memory: 500Mi
            cpu: 1000m
          requests:
            memory: 100Mi
            cpu: 200m
        volumeMounts:
          - name: file-storage
            mountPath: /mnt
      volumes:
        - name: file-storage
          persistentVolumeClaim:
            claimName: app-pvc
